# ASD

./: CMakeLists.txt  main.cpp
Timer/: CMakeLists.txt  Timer.cpp  Timer.h
_1/: CMakeLists.txt  desc.md  zadania.cpp  zadania.h
_1/dataFiles/: data_1  test1_OUT4  test2_OUT5  test3_OUT17
_1/rust/zadania/: Cargo.toml
_1/rust/zadania/src/: main.rs  zadania.rs
_2/: CMakeLists.txt  Zadania.cpp  Zadania.h
_2/dataFiles/: data  data1  data1.txt  data5.txt  outs.txt
_3/: CMakeLists.txt  Zadania.cpp  Zadania.h
_3/dataFiles/: data6.txt  data7.txt  out3.txt  outs.txt
_4/: CMakeLists.txt  Zadania.cpp  Zadania.h
_4/dataFiles/: data1  data2  dataTest  duzy3_out.txt
_5/: CMakeLists.txt  Zadania.cpp  Zadania.h
_5/dataFiles/: data1out  data2in  data2out  data3in  data3out  data4out  data5out
cwiczenia/: CMakeLists.txt  zad.cpp
dataStructers/: Bst.h  Bst_avl.h  Bst_avl.tpp  CMakeLists.txt  DynamicBitset.h  IndexedPriorityQueue.h
graphAlgs/: Algs.cpp  Algs.h  CMakeLists.txt  CppGraphBLAS.h
sortingAlgs/: CMakeLists.txt  sortAlgs.h  sortAlgsImpl.tpp
utils/: CMakeLists.txt  concepts.h  swap.h
